<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_crear_cuenta"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.n550j.acarreos.ElegirServicioActivity">



    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/activity_elegir_servicios"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:orientation="vertical"
            tools:context="com.example.n550j.acarreos.ElegirServicioActivity">
            <EditText
                android:id="@+id/edtNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_nombre_usuario"
                android:inputType="textLongMessage"
                />
            <EditText
                android:id="@+id/edtApellido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_apellido_usuario"
                android:inputType="text"
                />
            <EditText
                android:id="@+id/edtCelular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_celular_usuario"
                android:inputType="phone"
                />
            <EditText
                android:id="@+id/edtEmailCrearCuenta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                />
            <EditText
                android:id="@+id/edtContrasena"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_contrasena_usuario"
                android:inputType="textPassword"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btnCrearCuenta"
                android:text="@string/Crear_cuenta"
                android:theme="@style/PrimaryFlatButton" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>



</LinearLayout>

