<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_elegir_servicio"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.n550j.acarreos.ElegirServicioActivity">




    <android.support.v7.widget.RecyclerView
        android:id="@+id/my_recycler_view"
        android:scrollbars="horizontal"
        android:layout_width="match_parent"
        android:layout_height="200dp"/>


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/activity_elegir_servicios"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:orientation="vertical"
            tools:context="com.example.n550j.acarreos.ElegirServicioActivity">
    <EditText
        android:id="@+id/edtDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_descripcion"
        android:inputType="textLongMessage"
        />
    <EditText
        android:id="@+id/edtDireccionOrigne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_direccion_origen"
        android:inputType="text"
        />
    <EditText
        android:id="@+id/edtDireccionDestino"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_direccion_destino"
        android:inputType="text"
        />

    <Spinner
        android:id="@+id/spinnerHorario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"

        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calcula_acarreo"
        android:theme="@style/PrimaryFlatButton" />
    </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>
